@@ -33,6 +33,11 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       and we certainly do not need to fork to force it to succeed. Whether we
       are a process group leader already or become one doesn't matter, if the
       end result is that we are process group leader.
+    - x2goclient.cpp: don't start the UNIX cleanup helper process right after
+      forking, but introduce a new command line option --unixhelper and
+      re-execute the main binary with this new option to indicate that the
+      UNIX cleanup helper tool is requested. It is necessary to call exec()
+      after fork on virtually all operating system, especially on OS X.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
